--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,23 @@
   <groupId>FreeCRMTestAutomation</groupId>
   <artifactId>FreeCRMTest</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.2.2</version>
+					<configuration>
+						<suiteXmlFiles>
+							<suiteXmlFile>testng.xml</suiteXmlFile>
+						</suiteXmlFiles>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+
       <dependencies>
 	  <!-- https://mvnrepository.com/artifact/org.testng/testng -->
 <!-- https://mvnrepository.com/artifact/org.testng/testng -->
@@ -60,6 +77,13 @@
     <artifactId>mysql-connector-j</artifactId>
     <version>8.1.0</version>
 </dependency>
+		<!--
+		https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>3.11.0</version>
+		</dependency>
 
   </dependencies>
 </project>
